--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Freelancer - Start Bootstrap Theme</title>
+    <meta name="description" content="Explore the features and benefits of the ESP32 WiFi Thermostat, an advanced solution for efficient home heating management.">
+    <meta name="keywords" content="ESP32, WiFi Thermostat, Home Automation, Smart Thermostat, Temperature Control, Heating control">
+    <meta name="author" content="Your IoT">
+    <title>ESP32 WiFi Thermostat: Smart Home Temperature Control</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
